# Checkers

./: CMakeLists.txt  README.md  board.cpp  board.h  game.cpp  game.h  main.cpp  players.cpp  players.h
